tests/paczka1/small_fuzzy/98243912.err
Error in line 1: Qa3fIL S792 63,1
Error in line 4: Qa3fIL A43 70,0
Error in line 3: rih9qpibCy A338 20,6
